lib/globo_dns/importer/named_conf_parser.rb
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Autogenerated from a Treetop grammar. Edits may be lost.


require File.expand_path('../../../../config/environment', __FILE__)
require File.expand_path('../util', __FILE__)

module NamedConf
  include Treetop::Runtime

  def root
    @root ||= :file
  end

  module File0
    def space1
      elements[0]
    end

    def top_level_directive
      elements[1]
    end

    def space2
      elements[2]
    end
  end

  module File1
    attr_accessor :chroot_dir

    def named_conf
        view_keys = views.collect(&:key_name)
        str       = ''

        elements.each do |element|
            next unless element.respond_to?(:top_level_directive)
            top_level = element.top_level_directive

            # skip zones and views
            next if is_rule?(top_level, 'zone') ||
                    is_rule?(top_level, 'view') ||
                    is_rule?(top_level, 'key') && top_level.respond_to?(:key_name) && view_keys.include?(top_level.key_name.to_s)

            str << top_level.text_value << "\n\n"
        end
        str
    end

    def views
        @views ||= get_views_recursively
    end

    def domains
        @domains ||= get_domains_recursively
    end

    def directory_option
        @directory_option ||= get_directory_option_recursively
    end

    private

    def is_rule?(node, rule_name)
        node.extension_modules.include?("NamedConf::#{rule_name.camelize}0".constantize)
    end

    def get_views_recursively(node = self, views = Array.new)
        views << node.view if node.respond_to?(:view)
        node.elements.each do |child|
            get_views_recursively(child, views) unless child.terminal?
        end
        views
    end

    def get_domains_recursively(node = self, domains = Array.new)
        node.respond_to?(:view)   and return domains
        node.respond_to?(:domain) and domains << node.domain

        node.elements.each do |child|
            get_domains_recursively(child, domains) unless child.terminal?
        end
        domains
    end

    def get_directory_option_recursively(node = self)
        top_level = elements.find{|e| e.respond_to?(:top_level_directive) && is_rule?(e.top_level_directive, 'options')}
        top_level and top_level.top_level_directive.options_statements.elements.find{|e| e.respond_to?(:directory_option)}.try(:directory_option)
    end
  end

  def _nt_file
    start_index = index
    if node_cache[:file].has_key?(index)
      cached = node_cache[:file][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1, s1 = index, []
      r2 = _nt_space
      s1 << r2
      if r2
        r3 = _nt_top_level_directive
        s1 << r3
        if r3
          r4 = _nt_space
          s1 << r4
        end
      end
      if s1.last
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        r1.extend(File0)
      else
        @index = i1
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(File1)
    end

    node_cache[:file][start_index] = r0

    r0
  end

  module TopLevelDirective0
  end

  def _nt_top_level_directive
    start_index = index
    if node_cache[:top_level_directive].has_key?(index)
      cached = node_cache[:top_level_directive][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_acl
    if r1
      r0 = r1
      r0.extend(TopLevelDirective0)
    else
      r2 = _nt_controls
      if r2
        r0 = r2
        r0.extend(TopLevelDirective0)
      else
        r3 = _nt_include_
        if r3
          r0 = r3
          r0.extend(TopLevelDirective0)
        else
          r4 = _nt_key
          if r4
            r0 = r4
            r0.extend(TopLevelDirective0)
          else
            r5 = _nt_logging
            if r5
              r0 = r5
              r0.extend(TopLevelDirective0)
            else
              r6 = _nt_lwres
              if r6
                r0 = r6
                r0.extend(TopLevelDirective0)
              else
                r7 = _nt_masters
                if r7
                  r0 = r7
                  r0.extend(TopLevelDirective0)
                else
                  r8 = _nt_options
                  if r8
                    r0 = r8
                    r0.extend(TopLevelDirective0)
                  else
                    r9 = _nt_server
                    if r9
                      r0 = r9
                      r0.extend(TopLevelDirective0)
                    else
                      r10 = _nt_statistics_channels
                      if r10
                        r0 = r10
                        r0.extend(TopLevelDirective0)
                      else
                        r11 = _nt_trusted_keys
                        if r11
                          r0 = r11
                          r0.extend(TopLevelDirective0)
                        else
                          r12 = _nt_managed_keys
                          if r12
                            r0 = r12
                            r0.extend(TopLevelDirective0)
                          else
                            r13 = _nt_view
                            if r13
                              r0 = r13
                              r0.extend(TopLevelDirective0)
                            else
                              r14 = _nt_zone
                              if r14
                                r0 = r14
                                r0.extend(TopLevelDirective0)
                              else
                                @index = i0
                                r0 = nil
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end

    node_cache[:top_level_directive][start_index] = r0

    r0
  end

  module Acl0
    def space1
      elements[1]
    end

    def acl_name
      elements[2]
    end

    def space2
      elements[3]
    end

    def space3
      elements[5]
    end

    def acl_statements
      elements[6]
    end

    def space4
      elements[7]
    end

    def space5
      elements[9]
    end

  end

  module Acl1
  end

  def _nt_acl
    start_index = index
    if node_cache[:acl].has_key?(index)
      cached = node_cache[:acl][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('acl', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 3))
      @index += 3
    else
      terminal_parse_failure('acl')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        r3 = _nt_acl_name
        s0 << r3
        if r3
          r4 = _nt_space
          s0 << r4
          if r4
            if has_terminal?('{', false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('{')
              r5 = nil
            end
            s0 << r5
            if r5
              r6 = _nt_space
              s0 << r6
              if r6
                r7 = _nt_acl_statements
                s0 << r7
                if r7
                  r8 = _nt_space
                  s0 << r8
                  if r8
                    if has_terminal?('}', false, index)
                      r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure('}')
                      r9 = nil
                    end
                    s0 << r9
                    if r9
                      r10 = _nt_space
                      s0 << r10
                      if r10
                        if has_terminal?(';', false, index)
                          r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                          @index += 1
                        else
                          terminal_parse_failure(';')
                          r11 = nil
                        end
                        s0 << r11
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Acl0)
      r0.extend(Acl1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:acl][start_index] = r0

    r0
  end

  module Controls0
    def space1
      elements[1]
    end

    def space2
      elements[3]
    end

    def controls_statements
      elements[4]
    end

    def space3
      elements[5]
    end

    def space4
      elements[7]
    end

  end

  module Controls1
  end

  def _nt_controls
    start_index = index
    if node_cache[:controls].has_key?(index)
      cached = node_cache[:controls][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('controls', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 8))
      @index += 8
    else
      terminal_parse_failure('controls')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        if has_terminal?('{', false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('{')
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_space
          s0 << r4
          if r4
            r5 = _nt_controls_statements
            s0 << r5
            if r5
              r6 = _nt_space
              s0 << r6
              if r6
                if has_terminal?('}', false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure('}')
                  r7 = nil
                end
                s0 << r7
                if r7
                  r8 = _nt_space
                  s0 << r8
                  if r8
                    if has_terminal?(';', false, index)
                      r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure(';')
                      r9 = nil
                    end
                    s0 << r9
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Controls0)
      r0.extend(Controls1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:controls][start_index] = r0

    r0
  end

  module Include_0
    def space1
      elements[1]
    end

    def filename
      elements[2]
    end

    def space2
      elements[3]
    end

  end

  def _nt_include_
    start_index = index
    if node_cache[:include_].has_key?(index)
      cached = node_cache[:include_][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('include', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 7))
      @index += 7
    else
      terminal_parse_failure('include')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        r3 = _nt_filename
        s0 << r3
        if r3
          r4 = _nt_space
          s0 << r4
          if r4
            if has_terminal?(';', false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(';')
              r5 = nil
            end
            s0 << r5
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Include_0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:include_][start_index] = r0

    r0
  end

  module Key0
    def space1
      elements[1]
    end

    def key_name
      elements[2]
    end

    def space2
      elements[3]
    end

    def space3
      elements[5]
    end

    def key_statements
      elements[6]
    end

    def space4
      elements[7]
    end

    def space5
      elements[9]
    end

  end

  module Key1
  end

  def _nt_key
    start_index = index
    if node_cache[:key].has_key?(index)
      cached = node_cache[:key][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('key', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 3))
      @index += 3
    else
      terminal_parse_failure('key')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        r3 = _nt_key_name
        s0 << r3
        if r3
          r4 = _nt_space
          s0 << r4
          if r4
            if has_terminal?('{', false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('{')
              r5 = nil
            end
            s0 << r5
            if r5
              r6 = _nt_space
              s0 << r6
              if r6
                r7 = _nt_key_statements
                s0 << r7
                if r7
                  r8 = _nt_space
                  s0 << r8
                  if r8
                    if has_terminal?('}', false, index)
                      r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure('}')
                      r9 = nil
                    end
                    s0 << r9
                    if r9
                      r10 = _nt_space
                      s0 << r10
                      if r10
                        if has_terminal?(';', false, index)
                          r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                          @index += 1
                        else
                          terminal_parse_failure(';')
                          r11 = nil
                        end
                        s0 << r11
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Key0)
      r0.extend(Key1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:key][start_index] = r0

    r0
  end

  module Logging0
    def space1
      elements[1]
    end

    def space2
      elements[3]
    end

    def logging_statements
      elements[4]
    end

    def space3
      elements[5]
    end

    def space4
      elements[7]
    end

  end

  module Logging1
  end

  def _nt_logging
    start_index = index
    if node_cache[:logging].has_key?(index)
      cached = node_cache[:logging][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('logging', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 7))
      @index += 7
    else
      terminal_parse_failure('logging')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        if has_terminal?('{', false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('{')
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_space
          s0 << r4
          if r4
            r5 = _nt_logging_statements
            s0 << r5
            if r5
              r6 = _nt_space
              s0 << r6
              if r6
                if has_terminal?('}', false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure('}')
                  r7 = nil
                end
                s0 << r7
                if r7
                  r8 = _nt_space
                  s0 << r8
                  if r8
                    if has_terminal?(';', false, index)
                      r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure(';')
                      r9 = nil
                    end
                    s0 << r9
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Logging0)
      r0.extend(Logging1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:logging][start_index] = r0

    r0
  end

  module Lwres0
    def space1
      elements[1]
    end

    def space2
      elements[3]
    end

    def lwres_statements
      elements[4]
    end

    def space3
      elements[5]
    end

    def space4
      elements[7]
    end

  end

  module Lwres1
  end

  def _nt_lwres
    start_index = index
    if node_cache[:lwres].has_key?(index)
      cached = node_cache[:lwres][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('lwres', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 5))
      @index += 5
    else
      terminal_parse_failure('lwres')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        if has_terminal?('{', false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('{')
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_space
          s0 << r4
          if r4
            r5 = _nt_lwres_statements
            s0 << r5
            if r5
              r6 = _nt_space
              s0 << r6
              if r6
                if has_terminal?('}', false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure('}')
                  r7 = nil
                end
                s0 << r7
                if r7
                  r8 = _nt_space
                  s0 << r8
                  if r8
                    if has_terminal?(';', false, index)
                      r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure(';')
                      r9 = nil
                    end
                    s0 << r9
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Lwres0)
      r0.extend(Lwres1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:lwres][start_index] = r0

    r0
  end

  module Masters0
    def space1
      elements[1]
    end

    def masters_name
      elements[2]
    end

    def space2
      elements[3]
    end

    def space3
      elements[5]
    end

    def masters_statements
      elements[6]
    end

    def space4
      elements[7]
    end

    def space5
      elements[9]
    end

  end

  module Masters1
  end

  def _nt_masters
    start_index = index
    if node_cache[:masters].has_key?(index)
      cached = node_cache[:masters][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('masters', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 7))
      @index += 7
    else
      terminal_parse_failure('masters')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        r3 = _nt_masters_name
        s0 << r3
        if r3
          r4 = _nt_space
          s0 << r4
          if r4
            if has_terminal?('{', false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('{')
              r5 = nil
            end
            s0 << r5
            if r5
              r6 = _nt_space
              s0 << r6
              if r6
                r7 = _nt_masters_statements
                s0 << r7
                if r7
                  r8 = _nt_space
                  s0 << r8
                  if r8
                    if has_terminal?('}', false, index)
                      r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure('}')
                      r9 = nil
                    end
                    s0 << r9
                    if r9
                      r10 = _nt_space
                      s0 << r10
                      if r10
                        if has_terminal?(';', false, index)
                          r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                          @index += 1
                        else
                          terminal_parse_failure(';')
                          r11 = nil
                        end
                        s0 << r11
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Masters0)
      r0.extend(Masters1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:masters][start_index] = r0

    r0
  end

  module Options0
    def space1
      elements[1]
    end

    def space2
      elements[3]
    end

    def options_statements
      elements[4]
    end

    def space3
      elements[5]
    end

    def space4
      elements[7]
    end

  end

  module Options1
  end

  def _nt_options
    start_index = index
    if node_cache[:options].has_key?(index)
      cached = node_cache[:options][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('options', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 7))
      @index += 7
    else
      terminal_parse_failure('options')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_space
      s0 << r2
      if r2
        if has_terminal?('{', false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('{')
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_space
          s0 << r4
          if r4
            r5 = _nt_options_statements
            s0 << r5
            if r5
              r6 = _nt_space
              s0 << r6
              if r6
                if has_terminal?('}', false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure('}')
                  r7 = nil
                end
                s0 << r7
                if r7
                  r8 = _nt_space
                  s0 << r8
                  if r8
                    if has_terminal?(';', false, index)
                      r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure(';')
                      r9 = nil
                    end
                    s0 << r9
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Options0)
      r0.extend(Options1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:options][start_index] = r0

    r0
  end

  module Server0
    def ipaddr_prefix_length
      elements[1]
    end
  end

  module Server1
    def space1
      elements[1]
    end

    def server_ipaddr
      elements[2]
    end

    def space2
      elements[4]
    end

    def space3
      elements[6]
    end

    def server_statements
      elements[7]
    end

    def space4
      elements[8]
    end

    def space5
      elements[10]
    end

  end

  module Server2
  end

  def _nt_server
    start_index = index
    if node_cache[:server].has_key?(index)
      cached = node_cache[:server][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end
